test/files/pos/cycle/J_1.java
package bar;

public class J_1 {
  public void f(C.D arg) {
  }
}

class B extends J_1 {
  public void g(C.D arg) {
  }
}

class C extends B {
  public class D {
  }
}
