test/files/neg/t7386/MyClient.java

public class MyClient {
  public static void f() { MyClass.myStaticBaseMethod(); }
}
